--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -16,7 +16,7 @@ set $right l
 # Your preferred terminal emulator
 set $term foot
 # Your preferred application launcher
-set $menu wmenu-run
+set $menu wofi --show drun -I --width 28% --lines 12
 
 ### Output configuration
 #
@@ -37,6 +37,9 @@ exec swayidle -w \
          timeout 300 'swaylock -f -c 000000' \
          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
          before-sleep 'swaylock -f -c 000000'
+
+
+exec wlsunset -S 08:00 -s 23:59 -t 3300
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
