--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -63,6 +63,10 @@ input "type:pointer" {
     pointer_accel 0
 }
 
+input "type:keyboard" {
+    xkb_layout us,gr
+    xkb_options grp:win_space_toggle
+}
 ### Key bindings
 #
 # Basics:
