--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -2,9 +2,9 @@
 {
     // "layer": "top", // Waybar at top layer
     "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
+    "height": 24, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
-    "spacing": 4, // Gaps between modules (4px)
+    "spacing": 2, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
         "sway/workspaces",
@@ -12,9 +12,9 @@
         "sway/scratchpad",
         "custom/media"
     ],
-    "modules-center": [
-        "sway/window"
-    ],
+    //  "modules-center": [
+    //  "sway/window"
+    //],
     "modules-right": [
         "mpd",
         "idle_inhibitor",
