--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -80,6 +80,9 @@ input "type:keyboard" {
     # Start your launcher
     bindsym $mod+d exec $menu
 
+    # Take a Screenshot
+    bindsym $mod+Shift+s exec grim -g "$(slurp -d)" - | wl-copy
+
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
     # Despite the name, also works for non-floating windows.
